# Subdirectories to process.

add_subdirectory(rw/core)
add_subdirectory(rw/plugin)
add_subdirectory(rw/common)
add_subdirectory(rw/math)
add_subdirectory(rw/kinematics)
add_subdirectory(rw/geometry)
add_subdirectory(rw/sensor)
add_subdirectory(rw/graspplanning)
add_subdirectory(rw/models)
add_subdirectory(rw/trajectory)
add_subdirectory(rw/proximity)
add_subdirectory(rw/graphics)
add_subdirectory(rw/invkin)
add_subdirectory(rw/pathplanning)
add_subdirectory(rw/loaders)
add_subdirectory(rw)
add_subdirectory(rwlibs)


# Build sandbox if chosen
add_subdirectory(sandbox)
